--- a/packages/opus/src/index.scss
+++ b/packages/opus/src/index.scss
@@ -6,6 +6,10 @@ $phone-footer-height: 30;
 html, body {
   height: 100%;
   width: 100%;
+  padding-top: constant(safe-area-inset-top); /* 旧版iOS */
+  padding-top: env(safe-area-inset-top); /* 新版iOS */
+  padding-bottom: constant(safe-area-inset-bottom);
+  padding-bottom: env(safe-area-inset-bottom);
 }
 
 #root,.content {
